# qt-qml-opengl-demo

./: .gitignore  CMakeLists.txt
src/: Main.qml  main.cpp
src/OpenGLRenderer/: CMakeLists.txt  opengl_item.cpp  opengl_item.hpp  opengl_renderer.cpp  opengl_renderer.hpp
